--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
 
           						<div class="card-body">
 
-            						<h5 class="card-title"> Sandy () </h5>
+            						<h5 class="card-title"> Sandy S. </h5>
 
            							<p class="card-text"> Office Manager </p>
 
